diagram name change to fix toc overflow

--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -192,7 +192,7 @@ Visitor tak může oddělit logiku, která obstarává převod jednotlivých vý
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=1\linewidth]{figures/expression-visitor.pdf}
-    \caption{Využití vzoru Visitor pro převod logických výrazů do doménově specifického jazyka}
+    \caption{Využití vzoru Visitor pro převod logických výrazů do DSL}
     \label{fig:expression-visitor}
 \end{figure}
 
