--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -28,7 +28,7 @@
 \usepackage[
 pdftitle={\WorkTitle},              % nastaví v informacích o pdf název
 pdfauthor={\FirstandFamilyName},    % nastaví v informacích o pdf autora
-colorlinks=true,                    % před tiskem doporučujeme nastavit na false, aby odkazy a url nebyly šedé při ČB tisku
+colorlinks=false,                   % před tiskem doporučujeme nastavit na false, aby odkazy a url nebyly šedé při ČB tisku
 breaklinks=true,
 urlcolor=ctublue,
 citecolor=ctublue,
